aws-network-and-server-basics/template.yml
AWSTemplateFormatVersion: '2010-09-09'
Resources: 
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '10.0.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: 'default'
      Tags:
        - Key: 'Name'
          Value: 'VPC領域'
  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      # AvailabilityZone 指定しないとデフォルトで AWS によってゾーンが選択される。docs では推奨。
      CidrBlock: '10.0.1.0/24'
      MapPublicIpOnLaunch: false
      Tags:
        - Key: 'Name'
          Value: 'パブリックサブネット'
      VpcId: !Ref 'VPC'
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
  InternetGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: 'Name'
          Value: 'パブリックルートテーブル'
  RouteToInternetGateway:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
  WebServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: 'WEB-SG'
      GroupDescription: 'Security Group for web-server in public subnet'
      SecurityGroupIngress:
        - CidrIp: '0.0.0.0/0'
          Description: 'Allow SSH'
          FromPort: 22
          IpProtocol: 'tcp'
          ToPort: 22
        - CidrIp: '0.0.0.0/0'
          Description: 'HTTP'
          FromPort: 80
          IpProtocol: 'tcp'
          ToPort: 80
      VpcId: !Ref VPC
  WebServerInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: 'ami-06cd52961ce9f0d85' # Amazon Linux AMI
      InstanceType: 't3.nano'
      CreditSpecification:
        CPUCredits: 'standard'
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: '0'
          SubnetId: !Ref PublicSubnet
          PrivateIpAddress: '10.0.1.10'
          DeleteOnTermination: true
          GroupSet:
            - !Ref WebServerSecurityGroup
      BlockDeviceMappings:
        - DeviceName: '/dev/xvda'
          Ebs:
            VolumeSize: '8'
            VolumeType: 'standard'
            DeleteOnTermination: true
      Tags:
        - Key: 'Name'
          Value: 'Web Server'
      KeyName: 'NetworkAndServerBasics'
